--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,9 +11,9 @@ include(cmake/function.cmake)    # подхватываем функции, ре
 								 # и для создания исполняемого проекта в отдельные функции
 
 
-add_subdirectory(lib_stack)        # подключаем дополнительный CMakeLists.txt из подкаталога с именем lib_stack 
-add_subdirectory(lib_list)	   # подключаем дополнительный CMakeLists.txt из подкаталога с именем lib_list
-add_subdirectory(lib_StackFromList)# подключаем дополнительный CMakeLists.txt из подкаталога с именем lib_StackFromList
+add_subdirectory(lib_stack)          # подключаем дополнительный CMakeLists.txt из подкаталога с именем lib_stack 
+add_subdirectory(lib_list)	     # подключаем дополнительный CMakeLists.txt из подкаталога с именем lib_list
+add_subdirectory(lib_StackFromList)  # подключаем дополнительный CMakeLists.txt из подкаталога с именем lib_StackFromList
 add_subdirectory(lib_HashOpenShuffle)
 add_subdirectory(lib_HashTabList)
 add_subdirectory(lib_LinTabList)
@@ -22,6 +22,7 @@ add_subdirectory(lib_OrdTabMass)
 add_subdirectory(lib_TabSearchTree)
 add_subdirectory(lib_polinom)
 add_subdirectory(lib_postfix)
-add_subdirectory(main)             # подключаем дополнительный CMakeLists.txt из подкаталога с именем main
+add_subdirectory(lib_TableInterface)
+add_subdirectory(main)              # подключаем дополнительный CMakeLists.txt из подкаталога с именем main
 
 
